BlaBlaNet 1.15 (2016-10-01)
	- Change Widgets.php Remove Display Setting Make User menu easy and Friendly
        - Force Suckerberg Theme Install again Redbasic
        - Remove Images
        - Changes to Zot Protocol
        - Add Metatags to the .htconfig File 
        - Change and update Logos
        - Remove Old Chatroom changes widgets, menu.php, 
 