@@ -5,5 +5,7 @@ BlaBlaNet 1.15 (2016-10-01)
         - Changes to Zot Protocol
         - Add Metatags to the .htconfig File 
         - Change and update Logos
-        - Remove Old Chatroom changes widgets, menu.php, 
+        - Remove Old Chatroom changes widgets, menu.php, nav.php 
+        - Add for Unfinish Jobs for remove all the chat rooms code and restore official Comunications addon
+        - Remove to fron features.php advance theming and chatrooms 
  
